--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,13 @@
       "scripts": ["background.js"]
     }
   },
-  "icons": { "16": "calculator-16.png", "128": "calculator-128.png" },
+  "icons": {
+    "16": "calculator-16.png",
+    "128": "calculator-128.png"
+  },
   "permissions": [
-          "storage",
-		  "fileSystem",
-		  "syncFileSystem" 
-        ]
+    "storage",
+    "fileSystem",
+    "syncFileSystem"
+  ]
 }
